# talimini

./: .gitignore  COMBAT_FLOW.md  GAME_FLOW.md  ML_BOT_PLAN.md  ML_TRAINING_ANALYSIS.md  TEST_EXECUTION_SUMMARY.md  TEST_FIX_ANALYSIS.md  TEST_PLAN.md  TEST_RESULTS.md  TRAINING_FREEZE_FIX.md  main.py  pyproject.toml  requirement.md  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
checkpoints_sb3/extracted_model/: data  system_info.txt
data/: selfplay_dataset.npz
data/cards/: bittering_thorns_yellow.yaml  brutal_assault_blue.yaml  buckling_blow_yellow.yaml  clash_of_mountains_blue.yaml  crash_and_bash_blue.yaml  crash_down_red.yaml  debilitate_red.yaml  demo.yaml  disable_blue.yaml  edge_of_autumn.yaml  eq_blossom_of_spring.yaml  eq_cracker_jax.yaml  eq_ironrot_helm.yaml  eq_ironrot_legs.yaml  flatten_the_field_blue.yaml  flying_kick_red.yaml  grind_them_down_blue.yaml  head_jab_blue.yaml  hero_bravo_flattering_showman.yaml  ira_crimson_haze.yaml  knock_em_off_their_feet_red.yaml  lunging_press_blue.yaml  macho_grande_blue.yaml  reinforce_the_line_blue.yaml  salt_the_wound_yellow.yaml  scar_for_a_scar_red.yaml  springboard_somersault_yellow.yaml  thunder_quake_red.yaml  torrent_of_tempo_red.yaml  whirling_mist_blossom_yellow.yaml
data/decks/: bravo_demo_deck.json  ira_welcome.json
data/heroes/: ira_crimson_haze.yaml
data/weapons/: edge_of_autumn.yaml
fabgame/: __init__.py  action_enumeration.py  action_execution.py  agents_ml.py  config.py  deck.py  engine.py  exceptions.py  game_initialization.py  launcher.py  legacy_agents.py  models.py  pretty.py  ui_old.py
fabgame/agents/: __init__.py  base.py  heuristic.py  human.py  ml.py
fabgame/io/: __init__.py  card_yaml.py  hero_yaml.py  weapon_yaml.py
fabgame/rl/: __init__.py  action_mask.py  encoding.py  env.py  observation_builder.py  yaml_features.py
fabgame/rules/: __init__.py  abilities.py
fabgame/ui/: __init__.py
fabgame/ui/prompts/: __init__.py  arsenal_state.py  attack_state.py  base.py  defense_state.py  helpers.py  layer_state.py  reaction_state.py  sot_state.py  state_machine.py
fabgame/utils/: __init__.py  pitch_calculator.py
scripts/: debug_env.py  eval_agents.py  eval_sb3.py  gen_selfplay_data.py  quick_eval.py  train_rl.py  train_sb3.py  train_sb3_improved.py
tests/: __init__.py  conftest.py  test_action_mask.py  test_action_types.py  test_combat_flow.py  test_data_generation.py  test_edge_cases.py  test_env.py  test_integration.py  test_state_management.py  test_turn_phases.py  test_yaml_features.py
tools/: make_yaml_from_deck.py
